--- a/bootstrap-alerts/animated-alerts.html
+++ b/bootstrap-alerts/animated-alerts.html
@@ -11,23 +11,23 @@
   <body>
 <div class="container">
 <h2>Quanta</h2>
-<div class="alert alert-success">
+<div class="alert alert-success alert-dismissible fade in">
   <a href="#" class="close" data-dismiss="alert" aria-lable="close">&times;</a>
   <strong>Success</strong>
 Furure of quantum computing
 </div>
-<div class="alert alert-info">
+<div class="alert alert-info alert-dismissible fade in">
   <a href="#" class="close" data-dismiss="alert" aria-lable="close">&times;</a>
   <strong>Info</strong>
 Furure of quantum computing
 </div>
-<div class="alert alert-warning">
+<div class="alert alert-warning alert-dismissible fade in">
   <a href="#" class="close" data-dismiss="alert" aria-lable="close">&times;</a>
   <strong>Warning</strong>
 Furure of quantum computing
 </div>
 
-<div class="alert alert-danger">
+<div class="alert alert-danger alert-dismissible fade in">
   <a href="#" class="close" data-dismiss="alert" aria-lable="close">&times;</a>
   <strong>Danger</strong>
 Furure of quantum computing
