--- a/bootstrap-buttons/button-styles.html
+++ b/bootstrap-buttons/button-styles.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Closing Alerts</title>
+    <title>Button Styles</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -18,6 +18,8 @@
 <button type="button" name="button" class="btn btn-info">Quantum Computing</button>
 <button type="button" name="button" class="btn btn-warning">Quantum Computing</button>
 <button type="button" name="button" class="btn btn-danger">Quantum Computing</button>
+<button type="button" name="button" class="btn btn-link">Quantum Computing</button>
+
 </div>
   </body>
 </html>
