--- a/bootstrap-progress-bars/progress-bar-with-label.html
+++ b/bootstrap-progress-bars/progress-bar-with-label.html
@@ -16,6 +16,17 @@
 70%
   </div>
 </div>
+<!-- Progress bar with colour -->
+<div class="progress">
+  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="25" style="width:25%">
+25%
+  </div>
+</div>
+<div class="progress">
+  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="50" style="width:50%">
+50%
+  </div>
+</div>
 </div>
   </body>
 </html>
