--- a/bootstrap-progress-bars/progress-bar-with-label.html
+++ b/bootstrap-progress-bars/progress-bar-with-label.html
@@ -27,6 +27,18 @@
 50%
   </div>
 </div>
+<!-- Stripped -->
+<div class="progress">
+  <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="50" style="width:50%">
+50%
+  </div>
+</div>
+<!-- Animated -->
+<div class="progress">
+  <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="50" style="width:50%">
+50%
+  </div>
+</div>
 </div>
   </body>
 </html>
