--- a/test/quanta_test1.html
+++ b/test/quanta_test1.html
@@ -37,6 +37,14 @@
     ZealBots are at your service!
   </h1>
   <h4 class="text-center text-muted">Try a simple search</h4>
+  <form class="" action="index.html" method="post">
+    <div class="form-group">
+      <!-- <label for="inputlg">input-lg</label> -->
+      <input class="form-control input-lg " id="inputlg" type="text" placeholder="Search here with ZealBots  ">
+      
+      <button type="submit" class="btn btn-default ">Create a Newbot</button>
+    </div>
+  </form>
 </div>
   </body>
 </html>
